--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 
 # production
 /build
-.env
 
 # misc
 .DS_Store
@@ -29,6 +28,10 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+env
+/env
+/.env
+/.env/
 
 # vercel
 .vercel
